Happyhour/app/src/main/java/com/example/patrick/happyhour/BarListActivity.java
package com.example.patrick.happyhour;

import android.app.Activity;
import android.app.ActionBar;
import android.app.Fragment;
import android.app.FragmentTransaction;
import android.app.Notification;
import android.content.Context;
import android.os.Bundle;
import android.view.LayoutInflater;
import android.view.Menu;
import android.view.MenuItem;
import android.view.View;
import android.view.ViewGroup;
import android.os.Build;
import android.widget.ListView;
import android.widget.Toast;

import com.parse.FindCallback;
import com.parse.ParseException;
import com.parse.ParseObject;
import com.parse.ParseQuery;

import java.util.ArrayList;
import java.util.List;

import Models.Bar;
import Utils.ListViewAdapter;


public class BarListActivity extends Activity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_bar_list);
        if (savedInstanceState == null) {
            getFragmentManager().beginTransaction()
                    .add(R.id.container, new PlaceholderFragment())
                    .commit();
        }





    }


    @Override
    public boolean onCreateOptionsMenu(Menu menu) {
        // Inflate the menu; this adds items to the action bar if it is present.
        getMenuInflater().inflate(R.menu.bar_list, menu);



        return true;
    }

    @Override
    public boolean onOptionsItemSelected(MenuItem item) {
        // Handle action bar item clicks here. The action bar will
        // automatically handle clicks on the Home/Up button, so long
        // as you specify a parent activity in AndroidManifest.xml.
        int id = item.getItemId();
        if (id == R.id.action_add) {
            Fragment fragment = new AddBarFragment();
            FragmentTransaction fragmentTransaction = getFragmentManager().beginTransaction();
            fragmentTransaction.replace(R.id.container, fragment);
            fragmentTransaction.addToBackStack(null);
            fragmentTransaction.commit();
        }
            else if (id == R.id.action_search) {
                    Fragment fragment = new SearchFragment();
                    FragmentTransaction fragmentTransaction = getFragmentManager().beginTransaction();
                    fragmentTransaction.replace(R.id.container, fragment);
                    fragmentTransaction.addToBackStack(null);
                    fragmentTransaction.commit();

            }

        return super.onOptionsItemSelected(item);

    }

    /**
     * A placeholder fragment containing a simple view.
     */
    public static class PlaceholderFragment extends Fragment {

        public PlaceholderFragment() {
        }

        @Override
        public View onCreateView(LayoutInflater inflater, ViewGroup container,
                Bundle savedInstanceState) {
            final View rootView = inflater.inflate(R.layout.fragment_bar_list, container, false);

            ListView listViewBar = (ListView)rootView.findViewById(R.id.listViewBar);
            List<Bar> barList = getData();
            ListViewAdapter adapter = new ListViewAdapter(this.getActivity(),R.layout.activity_bar_list,barList);
            listViewBar.setAdapter(adapter);

            return rootView;
        }
    }

    private static List<Bar> getData(){

        final List<Bar> barItems = new ArrayList<>();

        ParseQuery<ParseObject> query = ParseQuery.getQuery("barObject");
        query.findInBackground(new FindCallback<ParseObject>() {
            @Override
            public void done(List<ParseObject> parseObjects, ParseException e) {
                if(e == null) {
                    for (ParseObject object : parseObjects)
                    {
                        Bar bar = new Bar(object.getString("barName"),object.getString("barAddress"),object.getString("barRating"));
                        barItems.add(bar);

                    }
                }
                else
                {
                    //error
                }
            }
        });

        return barItems;
    }

    private static void ShowException()
    {

    }
}
